patched bug for make cd

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,10 +8,20 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 
 # --- runtime stage ---
 FROM alpine:3.20
-RUN adduser -D -u 10001 appuser
+
+# Create group and user with fixed IDs
+RUN addgroup -g 10001 app && adduser -D -H -u 10001 -G app appuser
+
 WORKDIR /home/appuser
 COPY --from=build /out/server /usr/local/bin/server
-USER appuser
+
+# Ensure ownership (optional if you don’t write to $HOME)
+RUN chown -R 10001:10001 /home/appuser
+
+# Set USER **numerically** so kubelet can verify non-root
+USER 10001:10001
+
 EXPOSE 3000
 ENV PORT=3000
 ENTRYPOINT ["/usr/local/bin/server"]
+
